--- a/style.css
+++ b/style.css
@@ -1,10 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-body {
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-    margin: 0;
 }
-a {
+nav{
+    width: 100%;
+    height: 75px;
+    background-color: #2626B7;
+    line-height: 75px;
+    padding: 0px 100px;
+    position:fixed;
+    z-index: 1;
+
+}
+nav .logo{
+    font-size: 30px;
+    font-weight: bold;
+    letter-spacing: 1.5px;
+}
+nav .logo p{
+    float: left;
+    color: #fff;
+    text-transform: uppercase;
+}
+nav ul{
+    float: right;
+}
+nav ul li{
+    display: inline-block;
+    list-style: none;
+}
+nav ul li a{
+    color: #fff;
     text-decoration: none;
-    color: royalblue;
+    font-size: 18px;
+    text-transform: uppercase;
+    padding: 0px 32px;
 }
