--- a/style.css
+++ b/style.css
@@ -6,15 +6,20 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
+.image-container{
+    cursor: pointer;
+    margin-right: auto;
+    text-align: left;
+    justify-content: center;
+}
 nav{
     width: 100%;
-    height: 75px;
+    height: 100px;
     background-color: #2626B7;
     line-height: 75px;
     padding: 0px 100px;
     position:fixed;
     z-index: 1;
-
 }
 nav .logo{
     font-size: 30px;
