--- a/style.css
+++ b/style.css
@@ -5,43 +5,149 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+
 }
-.image-container{
+.image_container {
     cursor: pointer;
     margin-right: auto;
+    margin-top: 10px;
     text-align: left;
     justify-content: center;
 }
-nav{
+nav {
     width: 100%;
-    height: 100px;
-    background-color: #2626B7;
+    height: 116px;
+    background-color: #1f3270;
     line-height: 75px;
-    padding: 0px 100px;
+    padding: 8px 100px;
     position:fixed;
     z-index: 1;
+    overflow: hidden;
+    top: 0;
+    opacity: 95%;
 }
-nav .logo{
+nav .logo {
     font-size: 30px;
     font-weight: bold;
     letter-spacing: 1.5px;
 }
-nav .logo p{
+nav .logo p {
     float: left;
     color: #fff;
     text-transform: uppercase;
 }
-nav ul{
+nav ul {
     float: right;
 }
-nav ul li{
-    display: inline-block;
+nav ul:hover .dropdown-content {
+    display: block;
+}
+nav ul li {
+    display: inline;
     list-style: none;
 }
-nav ul li a{
+nav ul li a {
+    display: inline;
     color: #fff;
     text-decoration: none;
     font-size: 18px;
     text-transform: uppercase;
-    padding: 0px 32px;
+    padding: 16px;
+    transition: all .2s;
+}
+nav ul li a:hover {
+    background-color: white;
+    color: black;
+}
+a {
+    text-decoration: none;
+    color: royalblue;
+}
+main {
+    margin: 0;
+    margin-top: 96px;
+    background-color: white;
+}
+main p {
+    margin-left: 25px;
+    margin-right: 25px;
+}
+p {
+    word-break: normal;
+}
+.title_head {
+    margin-top: 125px;
+}
+.background_image {
+    width: 100%;
+    height: auto;
+    position: relative;
+    top: 96;
+    left: 0;
+    margin: 0;
+}
+.post_header {
+    position: relative;
+    top: 0;
+    left: 0;
+    margin: 0;
+}
+.post_header_news {
+    float: left;
+    background-color: white;
+    top: 88px;
+    left: 25px;
+    padding: 30px;
+    max-width: 50%;
+    max-height: auto;
+    width: fit-content;
+    position: absolute;
+    opacity: 90%;
+    height: auto;
+}
+.post_header_news ul li {
+    margin-left: 25px;
+}
+main h1 {
+    font-size: x-large;
+    padding: 25px 25px 25px 10%;
+    background-color: #e5e2e2;
+}
+main h2 {
+    margin-left: 10%;
+    padding: 15px;
+    color: #203474;
+}
+main ul li {
+    margin-left: 15%;
+    list-style: square;
+}
+.footer_top_bar {
+    background-color: rgb(0, 190, 0);
+}
+footer {
+    background-color: #203474;
+    color: white;
+}
+footer a {
+    color: white;
+}
+footer h1 {
+    margin-top: 20px;
+}
+.back_to_top {
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+.back_to_top a {
+    padding: 5px;
+    border: 2px solid rgb(126, 126, 126);
+    transition: border .2s;
+}
+.back_to_top a:hover {
+    border: 2px solid white;
+}
+
+.footer_info_items {
+    margin-left: 25%;
 }
