--- a/style.css
+++ b/style.css
@@ -11,36 +11,36 @@
     cursor: pointer;
     margin-right: auto;
     margin-top: 10px;
-    text-align: left;
-    justify-content: center;
+}
+.image_container ul {
+    float: right;
+}
+.image_container img {
+    float: left;
+    margin-top: 15px;
+    margin-left: 0;
 }
 nav {
     width: 100%;
-    height: 116px;
+    height: fit-content;
     background-color: #1f3270;
     line-height: 75px;
-    padding: 8px 100px;
+    padding: 0 100px;
     position:fixed;
     z-index: 1;
     overflow: hidden;
     top: 0;
     opacity: 95%;
+    display: inline;
 }
-nav .logo {
-    font-size: 30px;
-    font-weight: bold;
-    letter-spacing: 1.5px;
-}
-nav .logo p {
-    float: left;
+nav p {
     color: #fff;
     text-transform: uppercase;
+    display: inline;
 }
 nav ul {
     float: right;
-}
-nav ul:hover .dropdown-content {
-    display: block;
+    display: inline;
 }
 nav ul li {
     display: inline;
@@ -58,6 +58,7 @@ nav ul li a {
 nav ul li a:hover {
     background-color: white;
     color: black;
+    display: inline;
 }
 a {
     text-decoration: none;
@@ -82,8 +83,6 @@ p {
     width: 100%;
     height: auto;
     position: relative;
-    top: 96;
-    left: 0;
     margin: 0;
 }
 .post_header {
@@ -95,7 +94,7 @@ p {
 .post_header_news {
     float: left;
     background-color: white;
-    top: 88px;
+    top: 86px;
     left: 25px;
     padding: 30px;
     max-width: 50%;
@@ -108,15 +107,15 @@ p {
 .post_header_news ul li {
     margin-left: 25px;
 }
-.mdg-oscars-logo{
+.mdg_oscars_logo{
     margin-left: -20px;
     height: 150px;
     width: 150px;
 }
-.infos-container{
+.infos_container{
     background-color: #e5e2e2;
 }
-.infos-headline{
+.infos_headline{
     font-size: 15px;
     color: #203474;
     padding: 25px 25px 25px 10%;
@@ -124,7 +123,7 @@ p {
     justify-content: center;
     align-items: center;
 }
-.infos-text{
+.infos_text{
     display: grid;
     justify-content: center;
     align-items: center;
@@ -166,7 +165,7 @@ footer h1 {
 .back_to_top a:hover {
     border: 2px solid white;
 }
-.shool-award{
+.school_award{
     display: grid;
     justify-content: center;
     align-items: center;
