--- a/style.css
+++ b/style.css
@@ -191,3 +191,10 @@ footer h1 {
     justify-content: center;
     align-items: center;  
 }
+#mobile_navbar {
+    display: none;
+}
+
+#desktop_navbar {
+    display: none;
+}
